# os-emulation

./: Cargo.toml  README.md
crates/abi/os-abi-codegen/: Cargo.toml
crates/abi/os-abi-codegen/src/: generate.rs  lib.rs  main.rs
crates/abi/os-abi-spec/: Cargo.toml
crates/abi/os-abi-spec/src/: bridgesupport.rs  convention.rs  lib.rs  model.rs
crates/abi/os-abi-stubs/: Cargo.toml
crates/abi/os-abi-stubs/.generated/libc/: exit.rs  mod.rs  printf.rs  registry.rs  write.rs
crates/abi/os-abi-stubs/src/: lib.rs
crates/abi/os-abi-stubs/src/emit/: aarch64.rs  mod.rs  x86_64.rs
crates/daemon/os-codesign-macho/: Cargo.toml
crates/daemon/os-codesign-macho/src/: lib.rs
crates/daemon/os-daemon/: Cargo.toml
crates/daemon/os-daemon-hook/: Cargo.toml
crates/daemon/os-daemon-hook/src/: lib.rs
crates/daemon/os-daemon-protocol/: Cargo.toml
crates/daemon/os-daemon-protocol/src/: lib.rs
crates/daemon/os-daemon/src/: lib.rs
crates/daemon/os-daemon/tests/: daemon_e2e.rs
crates/daemon/os-rewrite-elf/: Cargo.toml
crates/daemon/os-rewrite-elf/src/: lib.rs
crates/daemon/os-rewrite-macho/: Cargo.toml
crates/daemon/os-rewrite-macho/src/: lib.rs
crates/daemon/os-rewrite-macho/tests/: real_binary_smoke.rs
crates/daemon/os-transform-core/: Cargo.toml
crates/daemon/os-transform-core/src/: lib.rs
crates/emit/os-linux-wasi/: Cargo.toml
crates/emit/os-linux-wasi/src/: lib.rs
crates/emit/os-syscall-emit/: Cargo.toml
crates/emit/os-syscall-emit/src/: lib.rs
crates/page/os-page/: Cargo.toml
crates/page/os-page-codegen/: Cargo.toml
crates/page/os-page-codegen/src/: lib.rs
crates/page/os-page/src/: backends.rs  lib.rs
crates/runtime/os-async/: Cargo.toml
crates/runtime/os-async/src/: lib.rs
crates/runtime/os-ctx/: Cargo.toml
crates/runtime/os-host-api/: Cargo.toml
crates/runtime/os-host-api/src/: filtered.rs  lib.rs  manifest.rs  redirecting.rs  registry.rs  tunneled.rs
docs/integrations/: README.md  private-os-handlers.md  speet.md  vane.md  wasm-blitz.md
