[workspace]
resolver = "3"
members = [
    "crates/runtime/os-ctx",
    "crates/runtime/os-host-api",
    "crates/target/os-target-core",
    "crates/build/os-build",
    "crates/abi/os-abi-spec",
    "crates/abi/os-abi-stubs",
    "crates/abi/os-abi-codegen",
    "crates/page/os-page",
    "crates/page/os-page-codegen",
    "crates/emit/os-syscall-emit",
    "crates/emit/os-linux-wasi",
]
