[package]
name = "os-daemon"
version = "0.1.0"
edition = "2021"
description = "Generic Unix-socket daemon dispatching to registered TransformBackend implementations."
publish = false
license-file = "../../../../speet/COPYING.md"

[dependencies]
os-transform-core = { path = "../os-transform-core" }
os-daemon-protocol = { path = "../os-daemon-protocol" }

[dev-dependencies]
tempfile = "3"
